@@ -1,10 +1,16 @@
 package org.javatraining.repository;
 
+import java.io.BufferedReader;
 import java.io.IOException;
-import java.net.URI;
+import java.io.InputStreamReader;
+import java.net.HttpURLConnection;
+import java.net.URL;
 import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+import java.util.ArrayList;
+
+import org.javatraining.entity.Shop;
+import org.json.JSONArray;
+import org.json.JSONObject;
 
 public class HotpepperRepository {
 	// create a client
@@ -14,14 +20,32 @@ public class HotpepperRepository {
 		this.client = HttpClient.newHttpClient();
 	}
 	
-	public String getJsonString() throws IOException, InterruptedException {
-        // リクエストを作成
-        HttpRequest request = HttpRequest
-        		.newBuilder(URI.create("http://webservice.recruit.co.jp/hotpepper/gourmet/v1/?key=7eaca5563e5d7d8e&large_area=Z011&format=json"))
-                .build();
-        // 同期API呼び出し
-        HttpResponse<String> response = this.client.send(request, HttpResponse.BodyHandlers.ofString());
-        System.out.println(response.body()); // 受信したJSON文字列を確認
-        return response.body();
-    }	
+	public ArrayList<Shop> getShops() throws IOException, InterruptedException {
+        URL url = new URL("https://webservice.recruit.co.jp/hotpepper/gourmet/v1/?key=7eaca5563e5d7d8e&middle_area=Y060&count=10&format=json");
+        HttpURLConnection conn = (HttpURLConnection)url.openConnection();
+
+        //値の取得＆出力
+		StringBuilder output = new StringBuilder();
+	        try(BufferedReader reader = new BufferedReader(new InputStreamReader(conn.getInputStream(), "UTF-8"))){
+            while (reader.ready()) {
+                output.append(reader.readLine());
+            }
+        }
+
+        //結果のJSON整形
+        JSONObject json = new JSONObject(output.toString());
+        JSONArray shopsJson = json.getJSONObject("results").getJSONArray("shop");
+        ArrayList<Shop> shops = new ArrayList<>();
+        for(Object shopJson : shopsJson) {
+        	Shop shop = createShop((JSONObject)shopJson);
+        	shops.add(shop);
+        }
+        return shops;		
+    }
+
+	private Shop createShop(JSONObject json) {
+        Shop shop = new Shop();
+        shop.setName(json.getString("name"));
+        return shop;
+    }
 }
